--- a/parse/CMakeLists.txt
+++ b/parse/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.19)
 
 project(parser LANGUAGES CXX)
 
-find_package(Boost COMPONENTS program_options REQUIRED )
+find_package(Boost COMPONENTS program_options filesystem REQUIRED )
 
 add_executable(parser main.cpp)
 
