--- a/ext/embed-resource/CMakeLists.txt
+++ b/ext/embed-resource/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.5)
-project(EmbedResource)
+cmake_minimum_required(VERSION 3.27)
+project(embed-resource)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
@@ -22,7 +22,19 @@ function(embed_resources out_var)
     set(${out_var} "${result}" PARENT_SCOPE)
 endfunction()
 
-add_executable(embed-resource embedresource.cpp resource.h)
-target_link_libraries(embed-resource)
+find_package(Boost COMPONENTS program_options filesystem REQUIRED )
+
+add_executable(${PROJECT_NAME}
+    ${CMAKE_CURRENT_SOURCE_DIR}/embedresource.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/resource.h
+)
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${LIBBYE_SOURCE_DIR}/ext/compressor)
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+    ${Boost_LIBRARIES}
+    fpaq0
+)
 
 set(EMBED_RES_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
