--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -5,5 +5,7 @@ set(INJA_USE_EMBEDDED_JSON OFF)
 set(INJA_BUILD_TESTS OFF)
 add_subdirectory(inja)
 
+add_subdirectory(compressor)
+
 include_directories(embed-resource)
 add_subdirectory(embed-resource)
